# HitmanAbsolutionModManager

./: CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json  vcpkg.json
assets/: HeaderLibraries.txt  STypeIDs.json
include/: Global.h  Logger.h  ModManager.h
include/Glacier/: SBodyPartDamageMultipliers.h  SColorRGB.h  SSettingsParamMultiplier.h  ZCurve.h  ZGameTime.h  ZSharedSensorDef.h  ZString.h  ZVariant.h
include/Glacier/Containers/: TArray.h  TFixedArray.h  TPair.h
include/Glacier/Entity/: SEntityTemplateEntitySubset.h  SEntityTemplatePinConnection.h  SEntityTemplateProperty.h  SEntityTemplatePropertyAlias.h  SEntityTemplateReference.h  STemplateEntity.h  STemplateEntityBlueprint.h  STemplateSubEntity.h  STemplateSubEntityBlueprint.h
include/Glacier/Math/: SMatrix33.h  SMatrix43.h  SVector2.h  SVector3.h
include/Glacier/Resource/: ZRuntimeResourceID.h  (+1 more)
include/Registry/: EnumRegistry.h  ResourceIDRegistry.h  TypeRegistry.h
include/Rendering/: DirectXRenderer.h  ImGuiRenderer.h  SwapChain.h
include/UI/: Console.h  ModSelector.h
include/Utility/: D3D11Utility.h  FileDialog.h  StringUtility.h  UI.h
src/: Display.cpp  Logger.cpp  ModManager.cpp  main.cpp
src/Glacier/: SBodyPartDamageMultipliers.cpp  SColorRGB.cpp  SSettingsParamMultiplier.cpp  ZCurve.cpp  ZGameTime.cpp  ZSharedSensorDef.cpp  ZString.cpp  ZVariant.cpp
src/Registry/: EnumRegistry.cpp  ResourceIDRegistry.cpp  TypeRegistry.cpp
src/Rendering/: DirectXRenderer.cpp  ImGuiRenderer.cpp  SwapChain.cpp
src/UI/: Console.cpp  ModSelector.cpp
src/Utility/: FileDialog.cpp  UI.cpp
(+21 files in other folders)
